--- a/src/components/Overview/_index.scss
+++ b/src/components/Overview/_index.scss
@@ -1,3 +1,26 @@
 .sm-Overview {
     margin-top: 20px;
+    position: relative;
+
+    #beeswarm {
+        display: flex;
+        flex-direction: column;
+        margin-left: 20px;
+    }
+
+    .popover {
+        background-color: white;
+        border-radius: 3px;
+        border: 1px solid #dedede;
+        opacity: 0;
+        padding: 4px;
+        width: max-content;
+        z-index: 999;
+    }
+
+    .yLabel {
+       z-index: 999;
+       margin-bottom: 10px;
+       font-size: 13px;
+    }
 }
