Add color channel

--- a/src/components/Header/_index.scss
+++ b/src/components/Header/_index.scss
@@ -5,4 +5,8 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+
+    &-button {
+        text-transform: capitalize !important;
+    }
 }
