--- a/src/components/Overview/_index.scss
+++ b/src/components/Overview/_index.scss
@@ -9,18 +9,20 @@
     }
 
     .popover {
-        background-color: white;
+        background-color: rgba(0, 0, 0, 0.75);
         border-radius: 3px;
         border: 1px solid #dedede;
         opacity: 0;
         padding: 4px;
         width: max-content;
         z-index: 999;
+        color: white;
     }
 
     .yLabel {
        z-index: 999;
        margin-bottom: 10px;
+       opacity: 0.7;
        font-size: 13px;
     }
 }
