--- a/src/components/Overview/_index.scss
+++ b/src/components/Overview/_index.scss
@@ -11,6 +11,7 @@
     .popover {
         background-color: rgba(0, 0, 0, 0.75);
         border-radius: 3px;
+        font-size: 11px;
         border: 1px solid #dedede;
         opacity: 0;
         padding: 4px;
@@ -24,5 +25,21 @@
        margin-bottom: 10px;
        opacity: 0.7;
        font-size: 13px;
+    }
+
+    &-legends {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 8px;
+        border-bottom: 1px dashed #dedede;
+    }
+
+    &-legend {
+        margin-right: 8px;
+        font-size: 13px;
+    }
+
+    &-legendColor {
+        margin-right: 3px;
     }
 }
