--- a/src/components/Overview/_index.scss
+++ b/src/components/Overview/_index.scss
@@ -1,5 +1,5 @@
 .sm-Overview {
-    margin-top: 20px;
+    margin-top: 0;
     position: relative;
 
     #beeswarm {
@@ -25,6 +25,7 @@
        margin-bottom: 10px;
        opacity: 0.7;
        font-size: 13px;
+       font-weight: 600;
     }
 
     &-legends {
@@ -32,6 +33,7 @@
         justify-content: center;
         padding-bottom: 8px;
         border-bottom: 1px dashed #dedede;
+        flex-wrap: wrap;
     }
 
     &-legend {
