Add x range filter

--- a/src/components/Header/_index.scss
+++ b/src/components/Header/_index.scss
@@ -1,4 +1,6 @@
 .sm-Header {
+    height: 64px;
+
     &-title {
         margin-left: 4px;
         background: -webkit-radial-gradient(#0065FF, #FF6666);
