--- a/src/components/Overview/_index.scss
+++ b/src/components/Overview/_index.scss
@@ -71,8 +71,18 @@
        font-weight: 600;
     }
 
-    &-rangeSlider {
-        margin-left: 8px;
+    &-rangeVal {
+        width: 45%;
+        
+        &:nth-child(0) {
+            margin-right: 10px;
+        }
+    }
+
+    &-rangeChanger {
+        display: flex;
+        justify-content: space-between;
+        margin-left: 5px;
 
         label {
             font-size: 12px;
