--- a/frontend/src/pages/Dashboard/_index.scss
+++ b/frontend/src/pages/Dashboard/_index.scss
@@ -1,4 +1,33 @@
 .sm-Dashboard {
-  margin: 0 10px 10px 10px;
-  padding: 0 20px 20px 20px;
+  &-body {
+    margin: 0 10px 10px 10px;
+    padding: 0 20px 20px 20px;
+  }
+
+  &-modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 770px;
+    padding: 12px;
+    background: white;
+    border: 2px solid #dedede;
+    border-radius: 4px;
+  }
+
+  &-modalBody {
+    display: flex;
+  }
+
+  &-modalFooter {
+    margin-top: 8px;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &-checkboxes {
+    display: flex;
+    flex-direction: column;
+  }
 }
