--- a/frontend/src/components/Overview/_index.scss
+++ b/frontend/src/components/Overview/_index.scss
@@ -63,12 +63,10 @@
         color: white;
     }
 
-    .yLabel {
-       z-index: 999;
-       margin-bottom: 10px;
-       opacity: 0.7;
-       font-size: 13px;
-       font-weight: 600;
+    .xLabel {
+       font-size: 14px;
+       font-weight: 500;
+       text-transform: capitalize;
     }
 
     &-rangeVal {
@@ -104,5 +102,9 @@
 
     &-legendColor {
         margin-right: 3px;
+    }
+
+    .label-family {
+        font-size: 14px;
     }
 }
