--- a/frontend/src/components/Overview/_index.scss
+++ b/frontend/src/components/Overview/_index.scss
@@ -45,6 +45,13 @@
         margin: 12px 0 12px 6px;
     }
 
+    &-cbLabel > .MuiFormControlLabel-label {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 180px;
+    }
+
     #beeswarm {
         display: flex;
         flex-direction: column;
@@ -63,7 +70,7 @@
         color: white;
     }
 
-    .xLabel {
+    .axisLabel {
        font-size: 14px;
        font-weight: 500;
        text-transform: capitalize;
