--- a/frontend/src/pages/Dashboard/_index.scss
+++ b/frontend/src/pages/Dashboard/_index.scss
@@ -4,6 +4,17 @@
     padding: 0 20px 20px 20px;
   }
 
+  &-empty {
+    align-items: center;
+    font-size: 25px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 15%;
+    opacity: 0.5;
+  }
+
   &-modal {
     position: absolute;
     top: 50%;
