--- a/frontend/src/pages/Dashboard/_index.scss
+++ b/frontend/src/pages/Dashboard/_index.scss
@@ -2,6 +2,8 @@
   &-body {
     margin: 0 10px 10px 10px;
     padding: 0 20px 20px 20px;
+    display: flex;
+    flex-direction: row;
   }
 
   &-empty {
