--- a/frontend/src/components/SummaryView/_index.scss
+++ b/frontend/src/components/SummaryView/_index.scss
@@ -10,4 +10,13 @@
         flex-direction: column;
         margin-left: 20px;
     }
+
+    &-legends {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 8px;
+        border-bottom: 1px dashed #dedede;
+        flex-wrap: wrap;
+    }
+
 }
