Fix layout of overview with summary

--- a/frontend/src/components/Overview/_index.scss
+++ b/frontend/src/components/Overview/_index.scss
@@ -4,6 +4,7 @@
     border: 1px dashed #dedede;
     padding: 8px;
     border-radius: 4px;
+    display: flex;
 
     &-filterpanel {
         height: 100%; /* 100% Full-height */
