--- a/frontend/src/components/SummaryView/_index.scss
+++ b/frontend/src/components/SummaryView/_index.scss
@@ -1,7 +1,6 @@
 .sm-SummaryView {
-    margin-top: 0;
+    margin: 0 0 0 10px;
     position: relative;
-    border: 1px dashed #dedede;
     padding: 8px;
     border-radius: 4px;
 
@@ -19,4 +18,12 @@
         flex-wrap: wrap;
     }
 
+    &-legend {
+        margin-right: 8px;
+        font-size: 13px;
+    }
+
+    &-legendColor {
+        margin-right: 3px;
+    }
 }
