Text now shows up showing all ordinal and quantitative attribute values in the detailed view - should probably limit this to the checked attributes in the future

--- a/frontend/src/components/DetailedView/_index.scss
+++ b/frontend/src/components/DetailedView/_index.scss
@@ -3,4 +3,11 @@
     position: relative;
     padding: 8px;
     border-radius: 4px;
+    display: flex;
+
+    #MoreInfo {
+        flex: 1;
+        margin-left: 20px;
+        white-space: pre-wrap;
+    }
 }
