Ability to add multiple views

--- a/frontend/src/components/Header/_index.scss
+++ b/frontend/src/components/Header/_index.scss
@@ -10,5 +10,10 @@
 
     &-button {
         text-transform: capitalize !important;
+        margin-right: 4px !important;
+    }
+
+    &-right {
+        display: flex;
     }
 }
