--- a/frontend/src/components/SummaryView/_index.scss
+++ b/frontend/src/components/SummaryView/_index.scss
@@ -1,10 +1,10 @@
 .sm-SummaryView {
     margin: 0 0 0 10px;
     position: relative;
-    padding: 8px;
+    padding: 0 8px 0 8px;
     border-radius: 4px;
 
-    #barchart {
+    &-chart {
         display: flex;
         flex-direction: column;
         margin-left: 20px;
