--- a/frontend/src/pages/Dashboard/_index.scss
+++ b/frontend/src/pages/Dashboard/_index.scss
@@ -4,6 +4,12 @@
     padding: 0 20px 20px 20px;
   }
 
+  &-bodyGrid {
+    margin: 0 10px 10px 10px;
+    display: flex;
+    overflow: auto;
+  }
+
   &-empty {
     align-items: center;
     font-size: 25px;
