--- a/frontend/src/components/DetailedView/_index.scss
+++ b/frontend/src/components/DetailedView/_index.scss
@@ -5,9 +5,12 @@
     border-radius: 4px;
     display: flex;
 
-    #MoreInfo {
-        flex: 1;
-        margin-left: 20px;
-        white-space: pre-wrap;
+    &-metadata {
+        margin: 10px 0 0 20px;
+        font-size: 14px;
+    }
+
+    &-spectrogram {
+        max-width: 300px;
     }
 }
