--- a/frontend/src/components/Overview/_index.scss
+++ b/frontend/src/components/Overview/_index.scss
@@ -86,6 +86,7 @@
         width: max-content;
         z-index: 999;
         color: white;
+        position: absolute !important;
     }
 
     .axisLabel {
