--- a/frontend/src/pages/Dashboard/_index.scss
+++ b/frontend/src/pages/Dashboard/_index.scss
@@ -1,11 +1,11 @@
 .sm-Dashboard {
   &-body {
-    margin: 0 10px 10px 10px;
-    padding: 0 20px 20px 20px;
+    margin: 0 10px 0 10px;
+    padding: 0 20px 0 20px;
   }
 
   &-bodyGrid {
-    margin: 0 10px 10px 10px;
+    margin: 0 10px 0 10px;
     display: flex;
     overflow: auto;
   }
