--- a/frontend/src/components/SummaryView/_index.scss
+++ b/frontend/src/components/SummaryView/_index.scss
@@ -26,4 +26,16 @@
     &-legendColor {
         margin-right: 3px;
     }
+
+    &-heading {
+        background: -webkit-linear-gradient(#0065FF, #FF6666);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 14px;
+        font-weight: 700;
+        text-align: center;
+        border-bottom: 1px solid #eee;
+        margin-bottom: 2px;
+        padding-bottom: 4px;
+    }
 }
