--- a/frontend/src/components/SummaryView/_index.scss
+++ b/frontend/src/components/SummaryView/_index.scss
@@ -38,4 +38,17 @@
         margin-bottom: 2px;
         padding-bottom: 4px;
     }
+
+    .popover {
+        background-color: rgba(0, 0, 0, 0.75);
+        border-radius: 3px;
+        font-size: 11px;
+        border: 1px solid #dedede;
+        opacity: 0;
+        padding: 4px;
+        width: max-content;
+        z-index: 999;
+        color: white;
+        position: absolute !important;
+    }
 }
