--- a/frontend/src/components/SummaryView/_index.scss
+++ b/frontend/src/components/SummaryView/_index.scss
@@ -1,4 +1,8 @@
 .sm-SummaryView {
+    margin: 0 0 0 10px;
+    position: relative;
+    padding: 0 8px 0 8px;
+    border-radius: 4px;
 
     &-chart {
         display: flex;
