--- a/client/src/components/DetailedView/_index.scss
+++ b/client/src/components/DetailedView/_index.scss
@@ -1,5 +1,5 @@
 .sm-DetailedView {
-    margin: -14px 0 0 20px;
+    margin: -14px 0 -5px 20px;
     position: relative;
     padding: 6px;
     border-radius: 4px;
