--- a/client/src/components/Header/_index.scss
+++ b/client/src/components/Header/_index.scss
@@ -1,5 +1,9 @@
 .sm-Header {
-    height: 64px;
+    height: 54px;
+
+    .navbar {
+        height: 48px !important;
+    }
 
     &-title {
         margin-left: 4px;
